--- a/ripgen/Cargo.toml
+++ b/ripgen/Cargo.toml
@@ -3,7 +3,7 @@ name = "ripgen"
 version = "0.1.0"
 edition = "2021"
 authors = ["d0nut <d0nut@resync.gg>", "youstin"]
-description = "dnsgen in rust"
+description = "A rust-based version of the popular dnsgen python utility."
 readme = "README.md"
 keywords = ["bug", "bounty", "dnsgen", "recon", "security"]
 license = "MIT"
